--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: splash
+title: Welcome to our website
+excerpt: The quick brown fox jumped over the lazy dog. 
 author_profile: true
 ---
+
+Um dois três quatro cinco seis sete oito nove dez onze doze treze quatroze quinze dezasseis dezassete dezoito dezanove vinte
