--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 ---
-layout: splash
-title: Welcome to our website
-excerpt: The quick brown fox jumped over the lazy dog. 
+layout: home
 author_profile: true
 ---
-
-Um dois três quatro cinco seis sete oito nove dez onze doze treze quatroze quinze dezasseis dezassete dezoito dezanove vinte
