--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: "Members"
 author_profile: true
 permalink: /members/
 ---
+
+<div markdown="1">
 ## Group 5
 
 | Name                 | Student Number | Email                            |  
@@ -12,3 +14,6 @@ permalink: /members/
 | João Norberto        |     69951      | jd.norberto@campus.fct.unl.pt    |
 | Manuel Letras da Luz |     70199      | mal.luz@campus.fct.unl.pt        |
 | João Fernandes       |     71798      | jpma.fernandes@campus.fct.unl.pt |
+</div>
+
+
