--- a/index.html
+++ b/index.html
@@ -1,19 +1,4 @@
 ---
-layout: single
-title: "Members"
+layout: home
 author_profile: true
-permalink: /members/
 ---
-
-<div markdown="1">
-## Group 5
-
-| Name                 | Student Number | Email                            |  
-| ---------------------|----------------|----------------------------------|
-| Afonso Leote         |     69970      | a.leote@campus.fct.unl.pt        |
-| João Norberto        |     69951      | jd.norberto@campus.fct.unl.pt    |
-| Manuel Letras da Luz |     70199      | mal.luz@campus.fct.unl.pt        |
-| João Fernandes       |     71798      | jpma.fernandes@campus.fct.unl.pt |
-</div>
-
-
